--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,15 @@
 
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}jquery.cycle.lite.1.0.min.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}jquery.infieldlabel.js"></script>
+    
+    <script type="text/javascript" charset="utf-8">
+        $(document).ready(function() {
+            $('#taglines').cycle();
+            $('label').addClass('infield').inFieldLabels();
+            $('#formerrors').fadeIn(1000);
+        });
+    </script>
 </head>
 <body>
 <div id="about">
@@ -25,6 +34,41 @@
     <div id="flowchart">
         Plane to Pony.
     </div>
+    
+    
 </div>
+
+<div id="right">
+    {% if not edc_subscribed %}
+        {# form submission via AJAX #}
+        {# display errors via shaking motion #}
+        
+        <div id="subscribe">
+            <form action="/subscribe/" method="POST" accept-charset="utf-8">
+                {% if form.errors %}
+                    <div id="formerror">
+                        {{ form.errors }}
+                    </div>
+                {% endif %}
+                <fieldset>
+                    {{ form.email.label_tag }}
+                    {{ form.email }}
+                </fieldset>
+                <fieldset>
+                    {{ form.tagline.label_tag }}
+                    {{ form.tagline }}
+                </fieldset>        
+                <p><input type="submit" value="Continue &rarr;"></p>
+            </form>
+        </div>            
+    {% endif %}
+    
+    <div id="taglines">
+        {% for t in taglines %}
+            <div class="tagline">{{ t.tagline }}</div>
+        {% endfor %}
+    </div>
+</div>
+
 </body>
 </html>
