--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,9 @@
     
     <script type="text/javascript" charset="utf-8">
         $(document).ready(function() {
-            $('#taglines').cycle();
+            $('#taglines').cycle({
+                timeout: 5000,
+            });
             $('label').addClass('infield').inFieldLabels();
             $('#formerrors').fadeIn(1000);
         });
@@ -25,7 +27,7 @@
     <h1>EuroDjangoCon</h1>
     <div class="lefttag">
         <div class="basicinfolabel">when:</div>
-        <h2 id="when">May 24th&ndash;28th, 2010</h2>
+        <h2 id="when">May/June, 2010 (<acronym title="To Be Announced">TBA</acronym>)</h2>
     </div>
     <div class="lefttag">
         <div class="basicinfolabel">where:</div>
@@ -38,37 +40,38 @@
     
 </div>
 
-<div id="right">
-    {% if not edc_subscribed %}
-        {# form submission via AJAX #}
-        {# display errors via shaking motion #}
-        
-        <div id="subscribe">
-            <form action="/subscribe/" method="POST" accept-charset="utf-8">
-                {% if form.errors %}
-                    <div id="formerror">
-                        {{ form.errors }}
-                    </div>
-                {% endif %}
-                <fieldset>
-                    {{ form.email.label_tag }}
-                    {{ form.email }}
-                </fieldset>
-                <fieldset>
-                    {{ form.tagline.label_tag }}
-                    {{ form.tagline }}
-                </fieldset>        
-                <p><input type="submit" value="Continue &rarr;"></p>
-            </form>
-        </div>            
-    {% endif %}
-    
-    <div id="taglines">
-        {% for t in taglines %}
-            <div class="tagline">{{ t.tagline }}</div>
-        {% endfor %}
-    </div>
+<div id="taglines">
+    {% for t in taglines %}
+        <div class="tagline">{{ t.tagline }}</div>
+    {% endfor %}
 </div>
 
+{% if not edc_subscribed %}
+    {# form submission via AJAX #}
+    {# display errors via shaking motion #}
+    
+    <div id="subscribe">
+        <h3>Our conference-news spam is made from 100% fresh pony.</h3>
+        <h4>Give us your email and we'll send you important info and announcements.</h4>
+        <form action="/subscribe/" method="POST" accept-charset="utf-8">
+            {% if form.errors %}
+                <div id="formerror">
+                    {{ form.errors }}
+                </div>
+            {% endif %}
+            <fieldset id="fieldset_email">
+                {{ form.email.label_tag }}
+                {{ form.email }}
+            </fieldset>
+            <input type="submit" value="Sign Up!" id="signupbutton"/>
+            <fieldset id="fieldset_tagline">
+                {{ form.tagline.label_tag }}
+                {{ form.tagline }}
+            </fieldset>
+            <h5>Suggest a short tagline for EuroDjangoCon 2010. Please don't be rude.</h5>
+            {# <p><input type="submit" value="Sign Up!"></p> #}
+        </form>
+    </div>            
+{% endif %}
 </body>
 </html>
