Fixing JS error with cycle.

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,7 @@
     
     <script type="text/javascript" charset="utf-8">
         $(document).ready(function() {
-            $('#taglines').cycle({
-                timeout: 5000,
-            });
+            $('#taglines').cycle({ timeout: 5000 });
             $('label').addClass('infield').inFieldLabels();
             $('#formerrors').fadeIn(1000);
         });
