--- a/static/local.css
+++ b/static/local.css
@@ -12,6 +12,8 @@ html, body {
 	width: 100%;
 }
 
+
+
 #about {
 	width: 345px;
 	background: url(edc_logo.png) no-repeat 0 40px;
@@ -206,6 +208,14 @@ input {
 	text-shadow: #fff 0 1px 0;
 	font-size: 16px;
 	margin-bottom: 10px;
+}
+
+#subscribe h4 a {
+	color: #5284a2;
+}
+
+#subscribe h4 a:hover {
+	color: #836651;
 }
 
 #subscribe h5 {
