--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,14 @@
-{% load gravatar %}
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
    "http://www.w3.org/TR/html4/strict.dtd">
-
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<title>EuroDjangoCon 2010</title>
-	<link rel="stylesheet" href="{{ MEDIA_URL }}reset.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>EuroDjangoCon 2010 - {% block title %}Berlin{% endblock %}</title>
+    <link rel="stylesheet" href="{{ MEDIA_URL }}reset.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
     <link rel="stylesheet" href="{{ MEDIA_URL }}local.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
-
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}jquery.cycle.lite.1.0.min.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}jquery.infieldlabel.js"></script>
-    
     <script type="text/javascript" charset="utf-8">
         $(document).ready(function() {
             $('#taglines').cycle({ timeout: 5000 });
@@ -36,46 +31,8 @@
     <div id="flowchart">
         Plane to Pony.
     </div>
-    
-    
 </div>
-
-<div id="taglines">
-    {% for t in taglines %}
-        <div class="tagline">{{ t.tagline }} <img class="gravatar" width=40 height=40 src="{% gravatar_for_email t.subscriber.email 40 %}"></div>
-        
-    {% endfor %}
-</div>
-
-
-{# form submission via AJAX #}
-{# display errors via shaking motion #}
-
-<div id="subscribe">    
-    {% if edc_subscribed %}
-        <h3>We'll drop you a line when we have news to share.</h3>
-        <h4>Would you like to <a href="{% url clear %}">register another email</a>?</h4>
-    {% else %}
-    <h3>Our conference-news spam is made from 100% fresh pony.</h3>
-    <h4>Give us your email and we'll send you important info and announcements.</h4>
-    <form action="{% url subscribe %}" method="POST" accept-charset="utf-8">
-        {% if form.errors %}
-            <div id="formerror">
-                {{ form.errors }}
-            </div>
-        {% endif %}
-        <fieldset id="fieldset_email">
-            {{ form.email.label_tag }}
-            {{ form.email }}
-        </fieldset>
-        <input type="submit" value="Sign Up!" id="signupbutton"/>
-        <fieldset id="fieldset_tagline">
-            {{ form.tagline.label_tag }}
-            {{ form.tagline }}
-        </fieldset>
-        <h5>Suggest a short tagline for EuroDjangoCon 2010. Please don't be rude.</h5>
-    </form>        
-    {% endif %}
-</div>         
+{% block main %}
+{% endblock %}
 </body>
 </html>
