--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -4,11 +4,11 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>EuroDjangoCon 2010 - {% block title %}Berlin{% endblock %}</title>
-    <link rel="stylesheet" href="{{ MEDIA_URL }}css/reset.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
-    <link rel="stylesheet" href="{{ MEDIA_URL }}css/local.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/local.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.cycle.lite.1.0.min.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.infieldlabel.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cycle.lite.1.0.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.infieldlabel.js"></script>
     <script type="text/javascript" charset="utf-8">
         $(document).ready(function() {
             $('#taglines').cycle({ timeout: 5000 });
