Adding proper attribution for usage of Museo

--- a/static/css/local.css
+++ b/static/css/local.css
@@ -1,3 +1,5 @@
+
+/* A font by Jos Buivenga (exljbris) -> www.exljbris.com */
 @font-face {
 	font-family: 'MuseoSans500';
 	src: url('MuseoSans_500.eot');
