--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -3,36 +3,34 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>EuroDjangoCon 2010 - {% block title %}Berlin{% endblock %}</title>
+    <title>DjangoCon.eu 2010 - {% block title %}Berlin{% endblock %}</title>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/960.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
     <link rel="stylesheet" href="{{ STATIC_URL }}css/local.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cycle.lite.1.0.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.infieldlabel.js"></script>
-    <script type="text/javascript" charset="utf-8">
-        $(document).ready(function() {
-            $('#taglines').cycle({ timeout: 5000 });
-            $('label').addClass('infield').inFieldLabels();
-            $('#formerrors').fadeIn(1000);
-        });
-    </script>
+    
+    {% block extra_css %}
+    {% endblock extra_css %}
+        
+    {% block extra_js %}
+    {% endblock extra_js %}
+    
+    {% block extra_head %}
+    {% endblock extra_head %}
 </head>
 <body>
-<div id="about">
-    <h1>EuroDjangoCon</h1>
-    <div class="lefttag">
-        <div class="basicinfolabel">when:</div>
-        <h2 id="when">May/June, 2010 (<acronym title="To Be Announced">TBA</acronym>)</h2>
-    </div>
-    <div class="lefttag">
-        <div class="basicinfolabel">where:</div>
-        <h2 id="where">Berlin</h2>
-    </div>
-    <div id="flowchart">
-        Plane to Pony.
-    </div>
-</div>
 {% block main %}
-{% endblock %}
+    {% block flash %}
+    {% endblock flash %}
+    
+    {% block header %}
+    {% endblock header %}
+    
+    {% block content %}
+    {% endblock content %}
+
+    {% block footer %}
+    {% endblock footer %}
+{% endblock main %}
 </body>
 </html>
