Adding header structure

--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -24,6 +24,13 @@
     {% endblock flash %}
     
     {% block header %}
+    <div id="masthead_wrap">
+        <div id="masthead">
+            <h1><a href="{% url home %}">djangocon.eu</a></h1>
+            <h2 id="when"><span class="whenwherelabel">when:</span> May/June 2010 (<acronym title="To Be Announced">TBA</acronym>)</h2>
+            <h2 id="where"><span class="whenwherelabel">where:</span> Berlin</h2>        
+        </div>        
+    </div>
     {% endblock header %}
     
     {% block content %}
