--- a/static/css/local.css
+++ b/static/css/local.css
@@ -15,8 +15,43 @@ html, body {
 }
 
 
+#masthead_wrap {
+	height: 220px;
+	overflow: none;
+	width: 100%;
+	background: url(../img/masthead_bg.png) repeat-x left 105px;
+	margin: 0;
+	padding: 0;
+}
 
-#about {
+#masthead {
+	width: 960px;
+	margin: 0 auto;
+	padding: 0;
+	background: url(../img/masthead_pony.png) no-repeat center 10px;
+}
+
+#masthead h1 {
+	width: 363px;
+	height: 99px;
+	margin: 0;
+	padding: 0;
+}
+
+#masthead h1 a {
+	display: block;
+	text-indent: -9999px;
+	width: 363px;
+	height: 99px;
+	background: url(../img/djangocon_eu_masthead.png) no-repeat left center;
+}
+
+
+
+/**** OLD STUFF BELOW ****/
+
+
+/*#about {
 	width: 345px;
 	background: url(../img/edc_logo2.png) no-repeat 0 40px;
 	float: left;
@@ -112,7 +147,7 @@ label {
 	margin: 0;
 	color: #736357;;
 	font-weight: normal;
-	text-shadow: #fff -1px -1px 0;*/
+	text-shadow: #fff -1px -1px 0;
 }
 
 label.infield {
@@ -194,13 +229,13 @@ img.gravatar {
 	min-width: 640px;
 	padding: 10px;
 	padding-top: 0;
-	/*-moz-border-radius-topleft: 8px;
+	-moz-border-radius-topleft: 8px;
 	-moz-border-radius-bottomleft: 8px;
 	-webkit-border-top-left-radius: 8px;
 	-webkit-border-bottom-left-radius: 8px;
 	border-top: 3px dashed #fff;
 	border-left: 3px dashed #fff;
-	border-bottom: 3px dashed #fff;*/
+	border-bottom: 3px dashed #fff;
 }
 
 #subscribe h3 {
@@ -250,4 +285,4 @@ img.gravatar {
     font-weight: normal;
     color: #157DBC;
     font-size: 19px;
-}
+}*/
