--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -26,10 +26,11 @@
     {% block header %}
     <div id="masthead_wrap">
         <div id="masthead">
+            <a id="pony_home" href="{% url home %}">&nbsp;</a>
             <h1><a href="{% url home %}">djangocon.eu</a></h1>
-            <h2 id="when"><span class="whenwherelabel">when:</span> May/June 2010 (<acronym title="To Be Announced">TBA</acronym>)</h2>
-            <h2 id="where"><span class="whenwherelabel">where:</span> Berlin</h2>        
-        </div>        
+            <h2 id="when">May / June 2010</h2>
+            <h2 id="where">Berlin</h2>
+        </div>
     </div>
     {% endblock header %}
     
