--- a/static/css/local.css
+++ b/static/css/local.css
@@ -114,7 +114,9 @@ h2#when {
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	-webkit-box-shadow: 2px 4px 3px rgba(0,0,0,0.1);
+	-moz-box-shadow: 2px 4px 3px rgba(0,0,0,0.1);
 	-webkit-transform: rotate(-15deg);
+	-moz-transform: rotate(-15deg);
 
 }
 
