--- a/static/css/local.css
+++ b/static/css/local.css
@@ -15,17 +15,17 @@ html, body {
 
 
 #masthead_wrap {
-	height: 220px;
+	height: 180px;
 	overflow: hidden;
 	width: 100%;
-	background: url(../img/masthead_bg.png) repeat-x left 105px;
+	background: url(../img/masthead_bg.png) repeat-x left 64px;
 	margin: 0 0 30px 0;
 	padding: 0;
 }
 
 #masthead {
 	width: 960px;
-	height: 220px;
+	height: 180px;
 	overflow: hidden;
 	margin: 0 auto;
 	padding: 0;
@@ -37,8 +37,8 @@ html, body {
 	display: block;
 	position: absolute;
 	width: 244px;
-	height: 210px;
-	top: 10px;
+	height: 200px;
+	top: 0;
 	left: 358px;
 	margin: 0;
 	padding: 0;
@@ -51,7 +51,7 @@ html, body {
 	position: absolute;
 	width: 363px;
 	height: 99px;
-	top: 105px;
+	top: 63px;
 	margin: 0;
 	padding: 0;
 }
@@ -75,14 +75,14 @@ html, body {
 }
 
 h2#where {
-	top: 145px;
+	top: 103px;
 	font-size: 42px;
 	left: 648px;
 	letter-spacing: 0.1em;
 }
 
 h2#when {
-	top: 127px;	
+	top: 85px;	
 	font-size: 15px;
 	color: #909ca2;
 	left: 650px;
@@ -90,7 +90,7 @@ h2#when {
 
 #tagline_wrap {
 	width: 960px;
-	height: 143px;
+	height: 113px;
 	overflow: visible;
 	margin: 0 auto 30px;
 	padding: 0;
@@ -104,14 +104,14 @@ h2#when {
 	border: 1px solid #aaa;
 	padding: 4px;
 	position: absolute;
-	top: 30px;
-	left: -40px;
+	top: 20px;
+	left: -25px;
 	-moz-border-radius: 2px;
 	-webkit-border-radius: 2px;
 	-webkit-box-shadow: 2px 4px 3px rgba(0,0,0,0.1);
 	-moz-box-shadow: 2px 4px 3px rgba(0,0,0,0.1);
-	-webkit-transform: rotate(-15deg);
-	-moz-transform: rotate(-15deg);
+	-webkit-transform: translate(0, 5px) rotate(-15deg);
+	-moz-transform: translate(0, 5px) rotate(-15deg);
 
 }
 
@@ -119,7 +119,7 @@ h2#when {
 	font-size: 34px;
 	text-shadow: #fff 0 2px 0;
 	position: absolute;
-	line-height: 115px;
+	line-height: 85px;
 	top: 8px;
 	left: 50px;
 	width: 900px;
