--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -38,6 +38,9 @@
     {% endblock content %}
 
     {% block footer %}
+    <div id="footer">
+        &copy; Deutscher Django-Verein e. V. 2010, all rights reserved | <a href="{% url colophon %}">Colophon &amp; Imprint</a> | <a href="http://pixane.com">pixels by <img src="{{ STATIC_URL }}img/by_pxd.png" alt="PXD" title="PXD"></a>"
+    </div>
     {% endblock footer %}
 {% endblock main %}
 </body>
