--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -39,7 +39,7 @@
 
     {% block footer %}
     <div id="footer">
-        &copy; Deutscher Django-Verein e. V. 2010, all rights reserved | <a href="{% url legal_notices %}">Legal Notices</a> | <a href="http://pixane.com">pixels by <img src="{{ STATIC_URL }}img/by_pxd.png" alt="PXD" title="PXD"></a>"
+        &copy; Deutscher Django-Verein e. V. 2010, all rights reserved | <a href="{% url colophon %}">Colophon &amp; Imprint</a> | <a href="http://pixane.com">pixels by <img src="{{ STATIC_URL }}img/by_pxd.png" alt="PXD" title="PXD"></a>"
     </div>
     {% endblock footer %}
 {% endblock main %}
