--- a/djangocon/templates/legal_notices.html
+++ b/djangocon/templates/legal_notices.html
@@ -6,7 +6,8 @@
         <p>Die Website djangocon.eu wird vom Deutschen Django-Verein e. V. i. G. betrieben.</p>
 
         <h4>Anschrift</h4>
-        {% filter linebreaks %}Deutscher Django-Verein e. V. i. G.
+        {% filter linebreaks %}
+        Deutscher Django-Verein e. V. i. G.
         Erich-Zeigner-Allee 52
         04229 Leipzig
         Deutschland
