Adding pretty 500 page

--- a/djangocon/templates/500.html
+++ b/djangocon/templates/500.html
@@ -1,7 +1,17 @@
-{% extends "base.html" %}
-
-{% block content %}
-    <div id="subscribe">
-        <h3>Server Error. Sorry.</h3>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>DjangoCon.eu 2010 - Berlin</title>
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/960.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/500.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
+    </head>
+<body>
+    <div class="wrap_960">
+        <h1>Server Error: 500</h1>
+        <h2>Now you have a dead pony on your conscience.</h2>
     </div>
-{% endblock content %}
+</body>
+</html>
