Now I'm the one on crack.

--- a/djangocon/templates/legal_notices.html
+++ b/djangocon/templates/legal_notices.html
@@ -10,8 +10,7 @@
             <p>Die Website djangocon.eu wird vom Deutschen Django-Verein e. V. i. G. betrieben.</p>
 
             <h4>Anschrift</h4>
-            {% filter linebreaks %}
-            Deutscher Django-Verein e. V. i. G.
+            {% filter linebreaks %}Deutscher Django-Verein e. V. i. G.
             Erich-Zeigner-Allee 52
             04229 Leipzig
             Deutschland
@@ -45,7 +44,7 @@
                 <li>Stephan Jäkel / <a href="http://twitter.com/younork">@younork</a></li>
                 <li>Idan Gazit / <a href="http://twitter.com/idangazit">@idangazit</a></li>
             </ul>
-            <p>You have three guesses as to which web development framework was used to build the site, and the first two don't count.'</p>
+            <p>You have three guesses as to which web development framework was used to build the site, and the first two don't count.</p>
         </div>
     </div>
 
