--- a/djangocon/templates/404.html
+++ b/djangocon/templates/404.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div id="subscribe">
-        <h3>Page not found. Sorry.</h3>
+    <div class="container_12 clearfix" id="not_found">
+        <div class="grid_6">
+            <h3>Page Not Found</h3>
+        </div>
+        <div class="grid_6">
+            <h4>The Django Pony is omniscient.</h4>
+            <p>Sadly, even The Pony cannot turn your mistyped URLs into pages full of content.</p>
+            <p>What, you say you've checked the URL and it's correct? Please <a href="mailto:contact@djangocon.eu">drop us a line</a> and tell us where things are broken.</p>
+            <p>For now, you might as well <a href="{% url home %}">head home</a>.</p>
+        </div>
     </div>
 {% endblock content %}
