--- a/djangocon/templates/startpage.html
+++ b/djangocon/templates/startpage.html
@@ -57,7 +57,7 @@
                 {{ form.tagline.label_tag }}
                 {{ form.tagline }}
             </fieldset>
-            <h5>Suggest a short tagline for djangocon.eu 2010. Please don't be rude.</h5>
+            <h5>Suggest a short tagline for djangocon.eu 2010. Please don't be rude. Avatars by <a href="http://gravatar.com">gravatar</a>.</h5>
             <input type="submit" value="Sign Up!" id="signupbutton"/>
         </form>
         {% endif %}
