Added Philipp to list of contributors

--- a/djangocon/templates/legal_notices.html
+++ b/djangocon/templates/legal_notices.html
@@ -43,6 +43,7 @@
                 <li>Jannis Leidel / <a href="http://twitter.com/jezdez">@jezdez</a></li>
                 <li>Stephan Jäkel / <a href="http://twitter.com/younork">@younork</a></li>
                 <li>Idan Gazit / <a href="http://twitter.com/idangazit">@idangazit</a></li>
+                <li>Philipp Bosch / <a href="http://twitter.com/philippbosch">@philippbosch</a></li>
             </ul>
             <p>You have three guesses as to which web development framework was used to build the site, and the first two don't count.</p>
         </div>
