Wrapping submit in <p> for validation

--- a/djangocon/templates/startpage.html
+++ b/djangocon/templates/startpage.html
@@ -60,7 +60,7 @@
                 {{ form.tagline }}
             </fieldset>
             <h5>Suggest a short tagline for djangocon.eu 2010. Please don't be rude. Avatars by <a href="http://gravatar.com">gravatar</a>.</h5>
-            <input type="submit" value="Sign Up!" id="signupbutton">
+            <p><input type="submit" value="Sign Up!" id="signupbutton"></p>
         </form>
         {% endif %}
     </div>
